# libvmod-dynamo

./: Makefile.am  README.md  README.rst  configure.ac  vmod-dynamo.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_dynamo.c  vmod_dynamo.vcc
src/tests/: test01.vtc
